<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.admin.kk.main.MainActivity">

    <TextView
        android:id="@+id/login_back_tv"
        android:layout_width="@dimen/titile_bar_height"
        android:layout_height="@dimen/titile_bar_height"
        android:text="X"
        android:gravity="center"/>

    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:background="@mipmap/watermark_tree"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/login_logo_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@mipmap/ic_launcher_round"
        android:text="@string/app_name"
        android:textSize="@dimen/btn_text_common_size"
        android:gravity="center"
        android:paddingTop="@dimen/login_logo_top_length"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/login_logo_hint_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/login_logo_iv"
        android:text="@string/login_logo_hint_tv"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@mipmap/ic_action_person"
        app:layout_constraintTop_toBottomOf="@+id/login_logo_hint_tv"
        android:hint="手机号/邮箱"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/login_context_padding_length"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/login_context_padding_length"
        android:layout_marginTop="@dimen/login_item_padding_length"/>
    <!-- lin-->

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_item_padding_length"
        app:layout_constraintTop_toBottomOf="@+id/username"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/login_context_padding_length"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/login_context_padding_length"
        android:drawableLeft="@mipmap/ic_action_accounts"
        android:hint="登录密码"/>

    <Button
        android:id="@+id/login_login_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_item_padding_length"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/login_context_padding_length"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/login_context_padding_length"
        android:text="@string/login_login_btn"/>
    <!--
        style="@style/textStyle"
        android:drawableRight="@mipmap/ic_action_accept"-->



    <ProgressBar
        android:id="@+id/progess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@android:style/Widget.ProgressBar.Inverse"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/login_login_hint_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/login_login_bt"
        android:layout_marginTop="@dimen/login_item_padding_length"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/login_login_hint_bt_phone"/>
    <TextView
        android:id="@+id/login_forget_paw_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/login_login_bt"
        android:layout_marginTop="@dimen/login_item_padding_length"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingRight="@dimen/login_context_padding_length"
        android:text="@string/login_forget_paw_tv"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/login_login_hint_tv"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/login_item_padding_length">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/login_weixin"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/login_qq"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/login_weibo"/>
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
